# recept

./: .gitignore  .python-version  .vercelignore  Pipfile  README.md  alembic.ini  app.json  build-pipenv.sh  build.sh  deploy-clean.sh  env.example  pyproject.toml  receipt_processing.db  requirements.txt  test-deployment.bat  test-deployment.sh  vercel.json
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  auth.py  bank_transactions.py  emails.py  transactions.py
app/core/: config.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: bank_transaction.py  email.py  transaction.py  user.py
app/schemas/: auth.py  bank_transaction.py  email.py  transaction.py  user.py
app/services/: auth_service.py  background_tasks.py  bank_transaction_service.py  email_service.py  gmail_service.py  openai_service.py  transaction_service.py  user_service.py
frontend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CSVUploader.tsx  ComparisonTable.tsx  DuplicateDetection.tsx  Layout.tsx  Navbar.tsx  NotificationDropdown.tsx  TransactionTable.tsx  WelcomeMessage.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/hooks/: use-auto-refresh.ts  use-toast.ts
frontend/src/pages/: AuthCallbackPage.tsx  ComparePage.tsx  DashboardPage.tsx  LoginPage.tsx  NotificationsPage.tsx
